Fix small tag too small

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -90,7 +90,7 @@ strong {
 }
 
 small {
-  @include relative-font-size(0.75);
+  font-size: 0.875em;
 }
 
 /**
